<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">MdReader</string>
  <string name="menu_about">About</string>
  <string name="menu_done">Done</string>
  <string name="menu_refresh">Refresh</string>
  <string name="menu_new">New</string>
  <string name="menu_save">Save</string>
  <string name="menu_edit">Edit</string>
  <string name="menu_delete">Delete</string>
  <string name="delete_title">Confirm Deletion</string>
  <string name="title_activity_edit">MdReader Edit</string>
  <string name="title_activity_rendered">MdReader View</string>
  <string name="title_activity_preferences">MdReader Preferences</string>
  <string name="menu_saveAs">Save As&#8230;</string>
  <string name="btn_tab">&#x21E5;</string>
  <string name="btn_code">&#x0060;code&#x0060;</string>
  <string name="menu_newfolder">New Folder</string>
  <string name="b">B</string>
  <string name="i">I</string>
  <string name="url">[URL]</string>
  <string name="hash">#</string>
  <string name="delete_confirmation">Really delete the selected items?</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="generic_error_message">Something went wrong</string>
  <string name="press_back_once_more_to_exit">Press \"back\" once more to exit</string>
  <string name="ok">OK</string>
  <string name="enter_filename">Enter filename:</string>
  <string name="file_already_exists">File already exists</string>
  <string name="cancel">Cancel</string>
  <string name="enter_folder_name">Enter folder name</string>
  <string name="folder_already_exists">Folder already exists</string>
  <string name="enter_url">Enter URL:</string>
  <string name="dowloaded_content_title">Dowloaded Content</string>
  <string name="images_read_error_title">Images can\'t be read</string>
  <string name="images_read_error_message">Save a local copy of the file to your device then try again</string>
  <string name="saved_as_info">Saved as: %s</string>
  <string name="file_save_error">Couldn\'t save the file for some reason</string>
  <string name="save_changes_title">Save Changes?</string>
  <string name="save_changes_message">All unsaved work will be lost</string>
  <string name="untitled_title">Untitled</string>
  <string name="overwrite">Overwrite?</string>
  <string name="link_text_hint">Text</string>
  <string name="link_url_hint">http://your.url/here/</string>
  <string name="directory">Directory</string>
  <string name="last_modified">Last Modified: %s</string>

  <string name="menu_preferences">Preferences</string>

  <string name="preference_light_theme_title">Light Theme</string>
  <string name="preference_light_theme_summary">Use light application theme</string>

  <string name="preference_directory_first_title">Directory First</string>
  <string name="preference_directory_first_summary">Show directories before files in list</string>

  <string name="preference_md_extensions">MarkDown Extensions</string>
  <string name="preference_use_md_extensions_title">Use MarkDown Extensions</string>
  <string name="preference_use_md_extensions_summary">Activate selected MarkDown extensions</string>
  <string name="preference_use_md_extensions_help_title">Info</string>
  <string name="preference_use_md_extensions_help_summary">MarkDown extensions online documentation</string>
  <string name="preference_use_md_extensions_configuration_title">Configuration</string>
  <string name="preference_use_md_extensions_configuration_summary">Configure MarkDown extensions</string>
  <string name="preference_use_md_extension_tables_title">Tables</string>
  <string name="preference_use_md_extension_tables_summary">Support tables</string>
  <string name="preference_use_md_extension_fenced_code_title">Fenced Code</string>
  <string name="preference_use_md_extension_fenced_code_summary">Support fenced code</string>
  <string name="preference_use_md_extension_footnotes_title">Footnotes</string>
  <string name="preference_use_md_extension_footnotes_summary">Support footnotes</string>
  <string name="preference_use_md_extension_autolink_title">Autolink</string>
  <string name="preference_use_md_extension_autolink_summary">Support autolink</string>
  <string name="preference_use_md_extension_strikethrough_title">Strikethrough</string>
  <string name="preference_use_md_extension_strikethrough_summary">Support strikethrough</string>
  <string name="preference_use_md_extension_underline_title">Underline</string>
  <string name="preference_use_md_extension_underline_summary">Support underline</string>
  <string name="preference_use_md_extension_highlight_title">Highlight</string>
  <string name="preference_use_md_extension_highlight_summary">Support highlight</string>
  <string name="preference_use_md_extension_quote_title">Quote</string>
  <string name="preference_use_md_extension_quote_summary">Support quote</string>
  <string name="preference_use_md_extension_superscript_title">Superscript</string>
  <string name="preference_use_md_extension_superscript_summary">Support superscript</string>
  <string name="preference_use_md_extension_math_title">Math</string>
  <string name="preference_use_md_extension_math_summary">Support math</string>
  <string name="preference_use_md_extension_no_intra_emphasis_title">No Intra Emphasis</string>
  <string name="preference_use_md_extension_no_intra_emphasis_summary">Support no intra emphasis</string>
  <string name="preference_use_md_extension_space_headers_title">Space Headers</string>
  <string name="preference_use_md_extension_space_headers_summary">Support space headers</string>
  <string name="preference_use_md_extension_math_explicit_title">Math Explicit</string>
  <string name="preference_use_md_extension_math_explicit_summary">Support math explicit</string>
  <string name="preference_use_md_extension_disable_indented_code_title">Disable Indented Code</string>
  <string name="preference_use_md_extension_disable_indented_code_summary">Support disable indented code</string>

  <string name="preference_html">HTML preferences</string>
  <string name="preference_html_use_extra_styles_title">Beautify</string>
  <string name="preference_html_use_extra_styles_summary">Use extra CSS styles</string>
  <string name="preference_html_use_folding_title">Folding</string>
  <string name="preference_html_use_folding_summary">Make headers (H1) collapsible</string>
</resources>