<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

  <CheckBoxPreference
    android:key="preference_directory_first"
    android:title="@string/preference_directory_first_title"
    android:summary="@string/preference_directory_first_summary" />

  <PreferenceCategory
    android:title="@string/preference_md_extensions">

    <PreferenceScreen
      android:title="@string/preference_use_md_extensions_help_title"
      android:summary="@string/preference_use_md_extensions_help_summary">

      <intent android:action="android.intent.action.VIEW"
        android:data="https://github.com/kjdev/apache-mod-hoedown/blob/master/README.md#hoedownextspaceheaders" />

    </PreferenceScreen>

    <CheckBoxPreference
      android:key="preference_use_md_extensions"
      android:title="@string/preference_use_md_extensions_title"
      android:summary="@string/preference_use_md_extensions_summary" />

    <PreferenceScreen
      android:key="preference_use_md_extensions_configuration"
      android:dependency="preference_use_md_extensions"
      android:layout="?android:attr/preferenceLayoutChild"
      android:title="@string/preference_use_md_extensions_configuration_title"
      android:summary="@string/preference_use_md_extensions_configuration_summary">

      <CheckBoxPreference
        android:key="preference_use_md_extension_tables"
        android:title="@string/preference_use_md_extension_tables_title"
        android:summary="@string/preference_use_md_extension_tables_summary" />
      <CheckBoxPreference
        android:key="preference_use_md_extension_fenced_code"
        android:title="@string/preference_use_md_extension_fenced_code_title"
        android:summary="@string/preference_use_md_extension_fenced_code_summary" />
      <CheckBoxPreference
        android:key="preference_use_md_extension_footnotes"
        android:title="@string/preference_use_md_extension_footnotes_title"
        android:summary="@string/preference_use_md_extension_footnotes_summary" />
      <CheckBoxPreference
        android:key="preference_use_md_extension_autolink"
        android:title="@string/preference_use_md_extension_autolink_title"
        android:summary="@string/preference_use_md_extension_autolink_summary" />
      <CheckBoxPreference
        android:key="preference_use_md_extension_strikethrough"
        android:title="@string/preference_use_md_extension_strikethrough_title"
        android:summary="@string/preference_use_md_extension_strikethrough_summary" />
      <CheckBoxPreference
        android:key="preference_use_md_extension_underline"
        android:title="@string/preference_use_md_extension_underline_title"
        android:summary="@string/preference_use_md_extension_underline_summary" />
      <CheckBoxPreference
        android:key="preference_use_md_extension_highlight"
        android:title="@string/preference_use_md_extension_highlight_title"
        android:summary="@string/preference_use_md_extension_highlight_summary" />
      <CheckBoxPreference
        android:key="preference_use_md_extension_quote"
        android:title="@string/preference_use_md_extension_quote_title"
        android:summary="@string/preference_use_md_extension_quote_summary" />
      <CheckBoxPreference
        android:key="preference_use_md_extension_superscript"
        android:title="@string/preference_use_md_extension_superscript_title"
        android:summary="@string/preference_use_md_extension_superscript_summary" />
      <CheckBoxPreference
        android:key="preference_use_md_extension_math"
        android:title="@string/preference_use_md_extension_math_title"
        android:summary="@string/preference_use_md_extension_math_summary" />
      <CheckBoxPreference
        android:key="preference_use_md_extension_no_intra_emphasis"
        android:title="@string/preference_use_md_extension_no_intra_emphasis_title"
        android:summary="@string/preference_use_md_extension_no_intra_emphasis_summary" />
      <CheckBoxPreference
        android:key="preference_use_md_extension_space_headers"
        android:title="@string/preference_use_md_extension_space_headers_title"
        android:summary="@string/preference_use_md_extension_space_headers_summary" />
      <CheckBoxPreference
        android:key="preference_use_md_extension_math_explicit"
        android:title="@string/preference_use_md_extension_math_explicit_title"
        android:summary="@string/preference_use_md_extension_math_explicit_summary" />
      <CheckBoxPreference
        android:key="preference_use_md_extension_disable_indented_code"
        android:title="@string/preference_use_md_extension_disable_indented_code_title"
        android:summary="@string/preference_use_md_extension_disable_indented_code_summary" />

    </PreferenceScreen>

  </PreferenceCategory>

  <PreferenceCategory
    android:title="@string/preference_html">

    <CheckBoxPreference
      android:key="preference_html_use_extra_styles"
      android:title="@string/preference_html_use_extra_styles_title"
      android:summary="@string/preference_html_use_extra_styles_summary" />
    <CheckBoxPreference
      android:key="preference_html_use_folding"
      android:title="@string/preference_html_use_folding_title"
      android:summary="@string/preference_html_use_folding_summary" />

  </PreferenceCategory>
<!--    <PreferenceCategory
            android:title="@string/dialog_based_preferences">

        <EditTextPreference
                android:key="edittext_preference"
                android:title="@string/title_edittext_preference"
                android:summary="@string/summary_edittext_preference"
                android:dialogTitle="@string/dialog_title_edittext_preference" />

        <ListPreference
                android:key="list_preference"
                android:title="@string/title_list_preference"
                android:summary="@string/summary_list_preference"
                android:entries="@array/entries_list_preference"
                android:entryValues="@array/entryvalues_list_preference"
                android:dialogTitle="@string/dialog_title_list_preference" />


  </PreferenceCategory>-->

</PreferenceScreen>
